# Birthday_Greeting_Kata

./: .env.template  README.md  docker-compose.yaml  dockerfile  pyproject.toml  requirements.txt
.github/workflows/: CI-main.yaml
app/: main.py
app/adapters/controllers/: greeting_controller.py  member_controller.py
app/adapters/presenters/: xml_presenter.py
app/adapters/repositories/: mongodb_member_repository.py  mysql_member_repository.py
app/adapters/services/: greeting_service_v1.py  greeting_service_v2.py  greeting_service_v3.py  greeting_service_v4.py  picture_service.py
app/entities/: member.py
app/infra/: dependencies.py
app/infra/db/: database.py  model.py
app/infra/db/mongodb/: database.py  model.py
app/infra/db/mysql/: model.py
app/infra/web/: router.py
app/use_cases/dtos/: birthday_greeting_dto.py  member_dto.py
app/use_cases/member_use_cases/: member_creation.py  member_deletion.py  send_birthday_greeting.py
app/use_cases/ports/: greeting_service.py  member_repository.py  picture_service.py  presenter.py
scripts/: clean_cache.sh  run_test.sh  start.sh
scripts/mongo_data/: backup.sh  restore.sh
scripts/mongo_data/greeting/: Member.bson  Member.metadata.json
scripts/mysql_data/: backup.sh  backup.sql
tests/api/: test_greeting_v1.py  test_greeting_v2.py  test_greeting_v3.py  test_greeting_v4.py  test_greeting_v5.py  test_greeting_v6.py  test_member_api.py
tests/unit/entities/: test_member.py
tests/unit/use_cases/: test_member_creation.py  test_member_use_cases.py  test_send_greeting.py
