[tool.poetry]
name = "Birthday_Greeting_Kata"
version = "0.1.0"
description = "LINE pre-interview assignment"
authors = ["Lanznx <109305092@g.nccu.edu.tw>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.103.1"
httpx = "^0.25.0"
python-dotenv = "^1.0.0"
uvicorn = "^0.23.2"
sqlalchemy = "^2.0.22"
mysqlclient = "^2.2.0"
black = "^23.10.0"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
email-validator = "^2.1.0.post1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.21.1"
black = "^23.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
